--- a/RecycleView/app/src/main/res/layout/item_todo.xml
+++ b/RecycleView/app/src/main/res/layout/item_todo.xml
@@ -19,10 +19,10 @@
 
     <CheckBox
         android:id="@+id/cbDone"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
