--- a/SimpleQuizApp/app/src/main/res/layout/activity_main.xml
+++ b/SimpleQuizApp/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="QuizApp"
+        android:fontFamily="sans-serif-medium"
         android:layout_marginBottom="30dp"
         android:textSize="28dp"
         android:textColor="@color/white"
@@ -56,7 +57,7 @@
                  />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/filledTextField"
+                android:id="@+id/input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
@@ -68,29 +69,13 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:textColorHint="#012902"
-                    />
+                    tools:ignore="TouchTargetSizeCheck" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
-   <!--         <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                >
-
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Name"
-                    android:textColor="@color/black"
-                    android:textColorHint="#012902"
-                    tools:ignore="TouchTargetSizeCheck" />
-
-           </com.google.android.material.textfield.TextInputLayout> -->
 
             <Button
-                android:id="@+id/btn_start"
+                android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
