--- a/Udemy Course/MyCalculator/app/src/main/res/layout/activity_main.xml
+++ b/Udemy Course/MyCalculator/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:layout_height="250sp"
         android:background="@color/black"
         android:padding="10dp"
-
         android:textSize="48sp"
         android:textColor="@color/white"
         android:gravity="end|bottom"
@@ -39,6 +38,7 @@
             android:backgroundTint="@color/black"
             tools:ignore="NestedWeights,UsingOnClickInXml" />
         <Button
+            android:layout_marginBottom="0dp"
             android:id="@+id/btn8"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -73,7 +73,7 @@
             android:textColor="@color/white"
             android:text="@string/_back"
             android:textSize="15sp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:backgroundTint="@color/black"
             tools:ignore="UsingOnClickInXml" />
 
@@ -133,7 +133,7 @@
             android:textColor="@color/white"
             android:text="@string/add"
             android:textSize="15sp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:backgroundTint="@color/black"
             tools:ignore="UsingOnClickInXml" />
 
@@ -193,7 +193,7 @@
             android:textColor="@color/white"
             android:text="@string/subs"
             android:textSize="15sp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:backgroundTint="@color/black"
             tools:ignore="UsingOnClickInXml" />
 
@@ -207,10 +207,23 @@
         android:layout_weight="1"
         >
         <Button
+            android:id="@+id/btndot"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="2dp"
+            android:textColor="@color/white"
+            android:text="."
+            android:textSize="15sp"
+            android:onClick="onDecimalPoint"
+            android:backgroundTint="@color/black"
+            tools:ignore="NestedWeights,UsingOnClickInXml" />
+
+        <Button
             android:id="@+id/btn0"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_margin="2dp"
             android:textColor="@color/white"
             android:text="@string/_0"
@@ -242,7 +255,7 @@
             android:textColor="@color/white"
             android:text="@string/multipl"
             android:textSize="15sp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:backgroundTint="@color/black"
             tools:ignore="UsingOnClickInXml" />
 
@@ -266,7 +279,7 @@
             android:textColor="@color/white"
             android:text="@string/equal"
             android:textSize="15sp"
-            android:onClick="onDigit"
+            android:onClick="onEqual"
             android:backgroundTint="@color/black"
             tools:ignore="NestedWeights,UsingOnClickInXml" />
 
