--- a/Udemy Course/7MinutesWorkout/app/src/main/res/drawable/item_color_accent_border_ripple_background.xml
+++ b/Udemy Course/7MinutesWorkout/app/src/main/res/drawable/item_color_accent_border_ripple_background.xml
@@ -5,7 +5,7 @@
     android:color="#C4C4C4">
     <item android:id="@android:id/mask">
         <shape android:shape="oval">
-            <solid android:color="#000000" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 
