--- a/Udemy Course/CloudPoint/app/src/main/res/values/themes.xml
+++ b/Udemy Course/CloudPoint/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.CloudPoint" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">#032B4A</item>
+        <item name="colorPrimaryVariant">#047DB3</item>
+        <item name="colorOnPrimary">#6CBFE4</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
