--- a/Udemy Course/CloudPoint/app/src/main/res/menu/menu_main.xml
+++ b/Udemy Course/CloudPoint/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.cloudpoint.MainActivity">
+    tools:context="com.example.cloudpoint.activities.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_refresh_24dp"
+        android:title="@string/refresh"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
